fix compile error: sum.misc cannot find symbol class BASE64Encoder
(cherry picked from commit 0588d23)